<resources>
    <string name="app_name">Welding Assistant</string>
    <string name="btn_menu1">Положение сварки</string>
    <string name="btn_menu2">Тип металла</string>
    <string name="btn_menu3">Толщина металла</string>
    <string name="btn_menu4">Диаметр электрода</string>
    <string name="btn_menu5">Рассчитать</string>
    <string name="btn_menu1r1">Горизонтальное</string>
    <string name="btn_menu1r2">Вертикальное</string>
    <string name="btn_menu1r3">Потолочное</string>
    <string name="btn_menu2r1">Чугун, сталь, цветной металл</string>
    <string name="btn_menu2r2">Тонкий металл или сплав</string>
    <string name="btn_menu3r1">2мм</string>
    <string name="btn_menu3r2">2,5мм</string>
    <string name="btn_menu3r3">3мм</string>
    <string name="btn_menu3r4">4мм</string>
    <string name="btn_info">Назад</string>
    <string name="Textinfo1">Прямая полярность - подсоединение заготовки к плюсу, а электрододержателя к минусу</string>
    <string name="Textinfo2">Обратная полярность - подсоединение заготовки к минусу, а электрододержателя к плюсу</string>
    <string name="Textinfo3">Для электрода с диаметром 2 мм подходят металлы толщиной от 1,5 до 2 мм</string>
    <string name="Textinfo4">Для электрода с диаметром 2,5 мм подходят металлы толщиной от 2 до 3 мм</string>
    <string name="Textinfo5">Для электрода с диаметром 3 мм подходят металлы толщиной от 3 до 4 мм</string>
    <string name="Textinfo6">Электрод нужно закреплять в электрододержатель под углом 90 градусов</string>
    <string name="Textinfo7">Проводить сварку металла нужно в специальной одежде: очки, плотные перчатки, комбинезон, сварочная маска</string>
    <string name="Textinfo8">Перед сваркой заготовку нужно обработать обезжиривателем</string>
    <string name="Textinfo9">При сварке электрод нужно держать под углом 45 градусов к заготовке</string>
    <string name="Textinfo10">Для электрода с диаметром 4 мм подходят металлы толщиной от 4 до 10 мм</string>


</resources>